# -CG-2020-I-Repositorio-Github

./: README.md
CGproject1/: CMakeLists.txt
CGproject1/include/glad/: glad.h
CGproject2Triangulo/: CMakeLists.txt
CGproject2Triangulo/CGproject2Triangulo/: glad.c  main.cpp
CGproject2Triangulo/lib/: glfw3.lib
